# RunicGearEngine

./: CMakeLists.txt  README.md
Libs/OpenglUtils/: CMakeLists.txt
Libs/OpenglUtils/include/: Utils.hpp
Libs/OpenglUtils/src/: Utils.cpp
Libs/UIEngine/: CMakeLists.txt
Libs/UIEngine/include/: Application.h  EmptyWidget.h  OpenglUtils.cpp  OpenglUtils.h  UIEngine.h  UIItem.cpp  UIItem.h  Utils.h  Widget.cpp  Widget.h  WidgetLayer.cpp  WidgetLayer.h  main.cpp
Libs/UIEngine/src/: UIEngine.cpp
Libs/glad/: CMakeLists.txt
Libs/glad/include/glad/: glad.h
Libs/glad/src/: glad.c
Libs/glfw/build_mingw/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
Libs/glfw/build_mingw/docs/: Doxyfile
Libs/glfw/build_mingw/src/: Makefile  cmake_install.cmake
Libs/glfw/build_vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
Libs/glfw/build_vs/docs/: Doxyfile  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  docs.vcxproj  docs.vcxproj.filters
Libs/glfw/build_vs/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters  boing.vcxproj  boing.vcxproj.filters  cmake_install.cmake  gears.vcxproj  gears.vcxproj.filters  heightmap.vcxproj  heightmap.vcxproj.filters  particles.vcxproj  particles.vcxproj.filters  simple.vcxproj  simple.vcxproj.filters  splitview.vcxproj  splitview.vcxproj.filters  wave.vcxproj  wave.vcxproj.filters
Libs/glfw/build_vs/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters
Libs/glfw/build_vs/tests/: INSTALL.vcxproj  INSTALL.vcxproj.filters  clipboard.vcxproj  clipboard.vcxproj.filters  cursor.vcxproj  (+34 more)
include/: Application.hpp  Metadata.hpp  Object.hpp  Resource.hpp  Texture.hpp  Window.hpp  WindowContext.hpp
src/: Application.cpp  Object.cpp  RunicGear.cpp  Window.cpp  WindowContext.cpp
test/: CMakeLists.txt  GEARTests.cpp
(+317 files in other folders)
